@@ -1,5 +1,8 @@
 2008-01-09  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>
 
+	* fvwm/placement.c (__pl_minoverlap_get_next_x):
+	do not add screen offset to window position
+
 	* libs/FlocaleCharset.c (FlocaleInit_X_Charset):
 	fixed a memory leak
 
